# Portfolio

./: README.md
CTFCompetitions/: 2024UIUC.txt
CTFs/HackTheBox/: Headless.txt  Lame.txt  Usage.txt
CTFs/OverTheWire/: Bandit.txt  README.md
CTFs/TryHackMe/: Blue.txt  LinuxPrivEsc.txt  README.md  SteelMountain.txt  VulnUniversity.txt  basicPentesting.txt  kenobi.txt
CTFs/TryHackMe/Challenges/: meterpreterChallenge.txt
CodingProjects/C++/: README.md
CodingProjects/C++/BinarySearch/: BinarySearch.sln
CodingProjects/C++/HashTable/: HashTable.sln
CodingProjects/C++/IsMinHeap/: IsMinHeap.sln
CodingProjects/C++/Yahtzee/: CMakeLists.txt  readme.md  yahtzee.cpp  yahtzee.h
CodingProjects/C++/Yahtzee/tests/: tests.cpp
CompletedCTFs/HackTheBox/: Bizness.txt  Crafty.txt
CompletedCTFs/OverTheWire/: Bandit.txt  README.md
CompletedCTFs/TryHackMe/: PickleRick.txt  README.md
ExploitDev/bufferOverflow/: readMe.md
Notes/Hashing/: encryption.txt  hashcat.txt  johnTheRipper.txt  whatIsHashing.txt
Notes/Metasploit/: meterpreter.txt
Notes/Vulnerabilities/: VulnerabilityCapstone.txt
Notes/privEsc/: privEscBasics.txt
Notes_Knowledge/: webUploadFiltering.txt
Notes_Knowledge/Burp/: BurpTroubleShoot.txt
Notes_Knowledge/Hashing/: encryption.txt  johnTheRipper.txt  whatIsHashing.txt
Notes_Knowledge/WebVuln/: webUploadChal.txt  webUploadFiltering.txt
Notes_Knowledge/activeDirectoryBasic/: domains.txt
Projects/Login Prototype/: login.html  server.py
TheForage/: README.md
demos/BinaryExploitation/: Pico_Buffer_Overflow_1.md
(+54 files in other folders)
